--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,19 @@
   margin: auto;
   margin-top: 120px;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(199, 205, 209); 
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: #748497; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #58677a; 
+}
