State functionality added

--- a/src/library.blocks/content/messages/dialogs-list/dialogs-list-message/dialogs-list-message.css
+++ b/src/library.blocks/content/messages/dialogs-list/dialogs-list-message/dialogs-list-message.css
@@ -3,6 +3,10 @@
     margin-bottom: 4px;
 }
 
+.dialogs-list-message_a{
+    text-decoration: none;
+}
+
 .message-sender{
     display: flex;
     align-items: center;
